--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -71,6 +71,14 @@
  RP_grand_duchy_DEF:0 "the Grand Duchy of $NONIDEOLOGY$"
  RP_grand_duchy_the:0 "Grand Duchy of the $NONIDEOLOGY$"
  RP_grand_duchy_the_DEF:0 "the Grand Duchy of the $NONIDEOLOGY$"
+ RP_banovina:0 "Banovina of $NONIDEOLOGY$"
+ RP_banovina_DEF:0 "the Banovina of $NONIDEOLOGY$"
+ RP_banovina_the:0 "Banovina of the $NONIDEOLOGY$"
+ RP_banovina_the_DEF:0 "the Banovina of the $NONIDEOLOGY$"
+ RP_banate:0 "Banate of $NONIDEOLOGY$"
+ RP_banate_DEF:0 "the Banate of $NONIDEOLOGY$"
+ RP_banate_the:0 "Banate of the $NONIDEOLOGY$"
+ RP_banate_the_DEF:0 "the Banate of the $NONIDEOLOGY$"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
