--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -49,6 +49,10 @@
  RP_duchy_the_decision:0 "Duchy of the [FROM.GetNonIdeologyName]"
  RP_grand_duchy_decision:0 "Grand Duchy of [FROM.GetNonIdeologyName]"
  RP_grand_duchy_the_decision:0 "Grand Duchy of the [FROM.GetNonIdeologyName]"
+ RP_banovina_decision:0 "Banovina of [FROM.GetNonIdeologyName]"
+ RP_banovina_the_decision:0 "Banovina of the [FROM.GetNonIdeologyName]"
+ RP_banate_decision:0 "Banate of [FROM.GetNonIdeologyName]"
+ RP_banate_the_decision:0 "Banate of the [FROM.GetNonIdeologyName]"
  RP_united_states_decision:0 "United States of [FROM.GetNonIdeologyName]"
  RP_united_states_the_decision:0 "United States of the [FROM.GetNonIdeologyName]"
  RP_united_provinces_decision:0 "United Provinces of [FROM.GetNonIdeologyName]"
