Tsardom, Margraviate and Sultanate

--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -79,6 +79,22 @@
  RP_banate_DEF:0 "the Banate of $NONIDEOLOGY$"
  RP_banate_the:0 "Banate of the $NONIDEOLOGY$"
  RP_banate_the_DEF:0 "the Banate of the $NONIDEOLOGY$"
+ RP_margraviate:0 "Margraviate of $NONIDEOLOGY$"
+ RP_margraviate_DEF:0 "the Margraviate of $NONIDEOLOGY$"
+ RP_margraviate_the:0 "Margraviate of the $NONIDEOLOGY$"
+ RP_margraviate_the_DEF:0 "the Margraviate of the $NONIDEOLOGY$"
+ RP_tsardom:0 "Tsardom of $NONIDEOLOGY$"
+ RP_tsardom_DEF:0 "the Tsardom of $NONIDEOLOGY$"
+ RP_tsardom_the:0 "Tsardom of the $NONIDEOLOGY$"
+ RP_tsardom_the_DEF:0 "the Tsardom of the $NONIDEOLOGY$"
+ RP_adj_tsardom:0 "$NONIDEOLOGYADJ$ Tsardom"
+ RP_adj_tsardom_DEF:0 "the $NONIDEOLOGYADJ$ Tsardom"
+ RP_sultanate:0 "Sultanate of $NONIDEOLOGY$"
+ RP_sultanate_DEF:0 "the Sultanate of $NONIDEOLOGY$"
+ RP_sultanate_the:0 "Sultanate of the $NONIDEOLOGY$"
+ RP_sultanate_the_DEF:0 "the Sultanate of the $NONIDEOLOGY$"
+ RP_adj_sultanate:0 "$NONIDEOLOGYADJ$ Sultanate"
+ RP_adj_sultanate_DEF:0 "the $NONIDEOLOGYADJ$ Sultanate"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
