--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -53,6 +53,14 @@
  RP_banovina_the_decision:0 "Banovina of the [FROM.GetNonIdeologyName]"
  RP_banate_decision:0 "Banate of [FROM.GetNonIdeologyName]"
  RP_banate_the_decision:0 "Banate of the [FROM.GetNonIdeologyName]"
+ RP_margraviate_decision:0 "Margraviate of [FROM.GetNonIdeologyName]"
+ RP_margraviate_the_decision:0 "Margraviate of the [FROM.GetNonIdeologyName]"
+ RP_tsardom_decision:0 "Tsardom of [FROM.GetNonIdeologyName]"
+ RP_tsardom_the_decision:0 "Tsardom of the [FROM.GetNonIdeologyName]"
+ RP_adj_tsardom_decision:0 "[FROM.GetNonIdeologyAdjective] Tsardom"
+ RP_sultanate_decision:0 "Sultanate of [FROM.GetNonIdeologyName]"
+ RP_sultanate_the_decision:0 "Sultanate of the [FROM.GetNonIdeologyName]"
+ RP_adj_sultanate_decision:0 "[FROM.GetNonIdeologyAdjective] Sultanate"
  RP_united_states_decision:0 "United States of [FROM.GetNonIdeologyName]"
  RP_united_states_the_decision:0 "United States of the [FROM.GetNonIdeologyName]"
  RP_united_provinces_decision:0 "United Provinces of [FROM.GetNonIdeologyName]"
