Principality and Emirate

--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -95,6 +95,19 @@
  RP_sultanate_the_DEF:0 "the Sultanate of the $NONIDEOLOGY$"
  RP_adj_sultanate:0 "$NONIDEOLOGYADJ$ Sultanate"
  RP_adj_sultanate_DEF:0 "the $NONIDEOLOGYADJ$ Sultanate"
+ RP_Emirate:0 "Emirate of $NONIDEOLOGY$"
+ RP_Emirate_DEF:0 "the Emirate of $NONIDEOLOGY$"
+ RP_Emirate_the:0 "Emirate of the $NONIDEOLOGY$"
+ RP_Emirate_the_DEF:0 "the Emirate of the $NONIDEOLOGY$"
+ RP_adj_Emirate:0 "$NONIDEOLOGYADJ$ Emirate"
+ RP_adj_Emirate_DEF:0 "the $NONIDEOLOGYADJ$ Emirate"
+ RP_united_states:0 "United States of $NONIDEOLOGY$"
+ RP_Principality:0 "Principality of $NONIDEOLOGY$"
+ RP_Principality_DEF:0 "the Principality of $NONIDEOLOGY$"
+ RP_Principality_the:0 "Principality of the $NONIDEOLOGY$"
+ RP_Principality_the_DEF:0 "the Principality of the $NONIDEOLOGY$"
+ RP_adj_Principality:0 "$NONIDEOLOGYADJ$ Principality"
+ RP_adj_Principality_DEF:0 "the $NONIDEOLOGYADJ$ Principality"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
