--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -61,6 +61,12 @@
  RP_sultanate_decision:0 "Sultanate of [FROM.GetNonIdeologyName]"
  RP_sultanate_the_decision:0 "Sultanate of the [FROM.GetNonIdeologyName]"
  RP_adj_sultanate_decision:0 "[FROM.GetNonIdeologyAdjective] Sultanate"
+ RP_emirate_decision:0 "Emirate of [FROM.GetNonIdeologyName]"
+ RP_emirate_the_decision:0 "Emirate of the [FROM.GetNonIdeologyName]"
+ RP_adj_Emirate_decision:0 "[FROM.GetNonIdeologyAdjective] Emirate"
+ RP_principality_decision:0 "Principality of [FROM.GetNonIdeologyName]"
+ RP_principality_the_decision:0 "Principality of the [FROM.GetNonIdeologyName]"
+ RP_adj_principality_decision:0 "[FROM.GetNonIdeologyAdjective] Principality"
  RP_united_states_decision:0 "United States of [FROM.GetNonIdeologyName]"
  RP_united_states_the_decision:0 "United States of the [FROM.GetNonIdeologyName]"
  RP_united_provinces_decision:0 "United Provinces of [FROM.GetNonIdeologyName]"
