Khanate and Khaganate

--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -108,6 +108,18 @@
  RP_Principality_the_DEF:0 "the Principality of the $NONIDEOLOGY$"
  RP_adj_Principality:0 "$NONIDEOLOGYADJ$ Principality"
  RP_adj_Principality_DEF:0 "the $NONIDEOLOGYADJ$ Principality"
+ RP_Khanate:0 "Khanate of $NONIDEOLOGY$"
+ RP_Khanate_DEF:0 "the Khanate of $NONIDEOLOGY$"
+ RP_Khanate_the:0 "Khanate of the $NONIDEOLOGY$"
+ RP_Khanate_the_DEF:0 "the Khanate of the $NONIDEOLOGY$"
+ RP_adj_Khanate:0 "$NONIDEOLOGYADJ$ Khanate"
+ RP_adj_Khanate_DEF:0 "the $NONIDEOLOGYADJ$ Khanate"
+ RP_Khaganate:0 "Khaganate of $NONIDEOLOGY$"
+ RP_Khaganate_DEF:0 "the Khaganate of $NONIDEOLOGY$"
+ RP_Khaganate_the:0 "Khaganate of the $NONIDEOLOGY$"
+ RP_Khaganate_the_DEF:0 "the Khaganate of the $NONIDEOLOGY$"
+ RP_adj_Khaganate:0 "$NONIDEOLOGYADJ$ Khaganate"
+ RP_adj_Khaganate_DEF:0 "the $NONIDEOLOGYADJ$ Khaganate"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
