--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -67,6 +67,12 @@
  RP_principality_decision:0 "Principality of [FROM.GetNonIdeologyName]"
  RP_principality_the_decision:0 "Principality of the [FROM.GetNonIdeologyName]"
  RP_adj_principality_decision:0 "[FROM.GetNonIdeologyAdjective] Principality"
+ RP_Khanate_decision:0 "Khanate of [FROM.GetNonIdeologyName]"
+ RP_Khanate_the_decision:0 "Khanate of the [FROM.GetNonIdeologyName]"
+ RP_adj_Khanate_decision:0 "[FROM.GetNonIdeologyAdjective] Khanate"
+ RP_Khaganate_decision:0 "Khaganate of [FROM.GetNonIdeologyName]"
+ RP_Khaganate_the_decision:0 "Khaganate of the [FROM.GetNonIdeologyName]"
+ RP_adj_Khaganate_decision:0 "[FROM.GetNonIdeologyAdjective] Khaganate"
  RP_united_states_decision:0 "United States of [FROM.GetNonIdeologyName]"
  RP_united_states_the_decision:0 "United States of the [FROM.GetNonIdeologyName]"
  RP_united_provinces_decision:0 "United Provinces of [FROM.GetNonIdeologyName]"
