Sublime State & Empire

--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -120,6 +120,14 @@
  RP_Khaganate_the_DEF:0 "the Khaganate of the $NONIDEOLOGY$"
  RP_adj_Khaganate:0 "$NONIDEOLOGYADJ$ Khaganate"
  RP_adj_Khaganate_DEF:0 "the $NONIDEOLOGYADJ$ Khaganate"
+ RP_Empire:0 "Empire of $NONIDEOLOGY$"
+ RP_Empire_DEF:0 "the Empire of $NONIDEOLOGY$"
+ RP_Empire_the:0 "Empire of the $NONIDEOLOGY$"
+ RP_Empire_the_DEF:0 "the Empire of the $NONIDEOLOGY$"
+ RP_adj_Empire:0 "$NONIDEOLOGYADJ$ Empire"
+ RP_adj_Empire_DEF:0 "the $NONIDEOLOGYADJ$ Empire"
+ RP_Sublime_State:0 "Sublime $NONIDEOLOGYADJ$ State"
+ RP_Sublime_State_DEF:0 "the Sublime $NONIDEOLOGYADJ$ State"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
