--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -73,6 +73,10 @@
  RP_Khaganate_decision:0 "Khaganate of [FROM.GetNonIdeologyName]"
  RP_Khaganate_the_decision:0 "Khaganate of the [FROM.GetNonIdeologyName]"
  RP_adj_Khaganate_decision:0 "[FROM.GetNonIdeologyAdjective] Khaganate"
+ RP_Empire_decision:0 "Empire of [FROM.GetNonIdeologyName]"
+ RP_Empire_the_decision:0 "Empire of the [FROM.GetNonIdeologyName]"
+ RP_adj_Empire_decision:0 "[FROM.GetNonIdeologyAdjective] Empire"
+ RP_Sublime_State_decision:0 "Sublime [FROM.GetNonIdeologyAdjective] State"
  RP_united_states_decision:0 "United States of [FROM.GetNonIdeologyName]"
  RP_united_states_the_decision:0 "United States of the [FROM.GetNonIdeologyName]"
  RP_united_provinces_decision:0 "United Provinces of [FROM.GetNonIdeologyName]"
