Territory, International Zone and Military Administration.

--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -216,6 +216,22 @@
  RP_dominion_DEF:0 "the Dominion of $NONIDEOLOGY$"
  RP_dominion_the:0 "Dominion of the $NONIDEOLOGY$"
  RP_dominion_the_DEF:0 "the Dominion of the $NONIDEOLOGY$"
+ RP_Territory:0 "Territory of $NONIDEOLOGY$"
+ RP_Territory_DEF:0 "the Territory of $NONIDEOLOGY$"
+ RP_Territory_the:0 "Territory of the $NONIDEOLOGY$"
+ RP_Territory_the_DEF:0 "the Territory of the $NONIDEOLOGY$"
+ RP_International_Zone:0 "International Zone of $NONIDEOLOGY$"
+ RP_International_Zone_DEF:0 "the International Zone of $NONIDEOLOGY$"
+ RP_International_Zone_the:0 "International Zone of the $NONIDEOLOGY$"
+ RP_International_Zone_the_DEF:0 "the International Zone of the $NONIDEOLOGY$"
+ RP_Military_Administration:0 "Military Administration of $NONIDEOLOGY$"
+ RP_Military_Administration_DEF:0 "the Military Administration of $NONIDEOLOGY$"
+ RP_Military_Administration_the:0 "Military Administration of the $NONIDEOLOGY$"
+ RP_Military_Administration_the_DEF:0 "the Military Administration of the $NONIDEOLOGY$"
+ RP_adj_Military_Administration:0 "$OVERLORDADJ$ Military Administration of $NONIDEOLOGY$"
+ RP_adj_Military_Administration_DEF:0 "the $OVERLORDADJ$ Military Administration of $NONIDEOLOGY$"
+ RP_adj_Military_Administration_the:0 "$OVERLORDADJ$ Military Administration of the $NONIDEOLOGY$"
+ RP_adj_Military_Administration_the_DEF:0 "the $OVERLORDADJ$ Military Administration of the $NONIDEOLOGY$"
  RP_RK:0 "Reichskommissariat $NONIDEOLOGY$"
  RP_RK_DEF:0 "das Reichskommissariat $NONIDEOLOGY$"
  RP_RP:0 "Reichsprotektorat $NONIDEOLOGY$"
