--- a/localisation/english/RP_decisions_l_english.yml
+++ b/localisation/english/RP_decisions_l_english.yml
@@ -121,6 +121,14 @@
  RP_adj_colony_decision:0 "[FROM.GetNonIdeologyName] Colony"
  RP_dominion_decision:0 "Dominion of [FROM.GetNonIdeologyName]"
  RP_dominion_the_decision:0 "Dominion of the [FROM.GetNonIdeologyName]"
+ RP_Territory_decision:0 "Territory of [FROM.GetNonIdeologyName]"
+ RP_Territory_the_decision:0 "Territory of the [FROM.GetNonIdeologyName]"
+ RP_International_Zone_decision:0 "International Zone of [FROM.GetNonIdeologyName]"
+ RP_International_Zone_the_decision:0 "International Zone of the [FROM.GetNonIdeologyName]"
+ RP_Military_Administration_decision:0 "Military Administration of [FROM.GetNonIdeologyName]"
+ RP_Military_Administration_the_decision:0 "Military Administration of the [FROM.GetNonIdeologyName]"
+ RP_adj_Military_Administration_decision:0 "[ROOT.GetAdjective] Military Administration of [FROM.GetNonIdeologyName]"
+ RP_adj_Military_Administration_the_decision:0 "[ROOT.GetAdjective] Military Administration of the [FROM.GetNonIdeologyName]"
  RP_RK_decision:0 "Reichskommissariat [FROM.GetNonIdeologyName]"
  RP_RP_decision:0 "Reichsprotektorat [FROM.GetNonIdeologyName]"
  RP_RL_decision:0 "Reichsland [FROM.GetNonIdeologyName]"
