--- a/localisation/english/RP_cosmetics_l_english.yml
+++ b/localisation/english/RP_cosmetics_l_english.yml
@@ -128,6 +128,10 @@
  RP_adj_Empire_DEF:0 "the $NONIDEOLOGYADJ$ Empire"
  RP_Sublime_State:0 "Sublime $NONIDEOLOGYADJ$ State"
  RP_Sublime_State_DEF:0 "the Sublime $NONIDEOLOGYADJ$ State"
+ RP_Khedivate:0 "Khedivate of $NONIDEOLOGY$"
+ RP_Khedivate_DEF:0 "the Khedivate of $NONIDEOLOGY$"
+ RP_Khedivate_the:0 "Khedivate of the $NONIDEOLOGY$"
+ RP_Khedivate_the_DEF:0 "the Khedivate of the $NONIDEOLOGY$"
  RP_united_states:0 "United States of $NONIDEOLOGY$"
  RP_united_states_DEF:0 "the United States of $NONIDEOLOGY$"
  RP_united_states_the:0 "United States of the $NONIDEOLOGY$"
